--- a/views/home.jade
+++ b/views/home.jade
@@ -26,6 +26,13 @@ block inlineScripts
 			notificationCount--;
 			$('#notificationHeading').text('Notifications: ' + notificationCount);
 		}
+		
+		// connect to the socket server
+		var socket = io.connect(); 
+		// if we get an "info" emit from the socket server then console.log the data we recive
+		socket.on('news', function (data) {
+			console.log(data);
+		});
 
 block content
 	include partials/teamLink		
