--- a/public/css/master.css
+++ b/public/css/master.css
@@ -134,6 +134,9 @@ li.notification p:nth-child(2) {
 	cursor: pointer;	
 	text-align: center;
 	display:inline-block;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 }
 
 #tradeObjects p:hover {
