--- a/views/trade3.jade
+++ b/views/trade3.jade
@@ -1,8 +1,34 @@
 extends layout
 block inlineScripts
 	script.
+		var okWords = [
+			"0","1","2","3","4","5","6","7","8","9","d","o","l","a","r"
+		];
+
+		$(document).on('keypress', function(e) {
+			var keyId = e.keyCode;
+			if(keyId == 8 || keyId == 46) {
+				alert('backspace');
+			}
+			var tag = e.target.tagName.toLowerCase();
+			if (tag != 'input' && tag != 'textarea') {
+				var key = e.which;
+				okWords.forEach(function(word) {
+					var letter = String.fromCharCode(key);
+					if(letter == word) {
+						addObjHelper(word);
+						return;
+					}
+				})
+			}
+		});
+
 		var addObj = function(p) {
-			var addObjText = $(p).text();
+			addObjHelper($(p).text());
+		}
+
+		var addObjHelper = function(text) {
+			var addObjText = text;
 			var curTradeObj = $('p#curText');
 			var curTradeText = curTradeObj.text();
 			var newText;
