--- a/views/freeAgentAuction.jade
+++ b/views/freeAgentAuction.jade
@@ -3,17 +3,29 @@ extends layout
 block content
 
 	-var faa_cash;
-	-cash.forEach(function(c) {
-	-	if(c.type == 'FA' && c.year == year) {
+	-cashs.forEach(function(c) {
+	-	if(user != null && c.team == user.team) {
 	-		faa_cash = c;
 	-	}	
 	-})
 
 	section(id="top")
-		h1 Free Agent Auctions
-		-if(user != null)
-			h3= "Your available cash: " +  faa_cash.value
-		p= message
+		div
+			h1 Free Agent Auctions
+			-if(user != null)
+				h3= "Your available cash: " +  faa_cash.value
+			p= message
+		div(style="display:inline")
+			h3= "Other teams cash:"
+			-var count = 0;
+			table
+				-each cash in cashs
+					-if(count % 3 == 0)
+						tr
+					-if(user == null || user.team != cash.team)
+						td= teamHash[cash.team].fullName
+						td= cash.value
+						-count++;
 	
 	section(id="left" style="width:100%")
 		-if(isOffseason && (!user || user.role != 'admin'))
