--- a/views/trade3.jade
+++ b/views/trade3.jade
@@ -1,28 +1,6 @@
 extends layout
 block inlineScripts
 	script.
-		var okWords = [
-			"0","1","2","3","4","5","6","7","8","9","d","o","l","a","r"
-		];
-
-		$(document).on('keypress', function(e) {
-			var keyId = e.keyCode;
-			if(keyId == 8 || keyId == 46) {
-				alert('backspace');
-			}
-			var tag = e.target.tagName.toLowerCase();
-			if (tag != 'input' && tag != 'textarea') {
-				var key = e.which;
-				okWords.forEach(function(word) {
-					var letter = String.fromCharCode(key);
-					if(letter == word) {
-						addObjHelper(word);
-						return;
-					}
-				})
-			}
-		});
-
 		var addObj = function(p) {
 			addObjHelper($(p).text());
 		}
@@ -52,9 +30,10 @@ block inlineScripts
 
 			var draftPickPattern = /(^(Rights to swap )?(1st|2nd|3rd|[456789]th|10th) round draft pick in 20[0-9][0-9])|(20[0-9][0-9] (1st|2nd|3rd|[456789]th|10th) round draft pick)/g;
 			var cashPattern = /\$\d+ of 20[0-9][0-9] (MLB|Free Agent Auction)( draft)? cash/g;
+			var cashPattern2 = /\$\d+ of (MLB|Free Agent Auction)( draft)? cash in 20[0-9][0-9]/g;
 			
 			var draftPickMatch = curTradeText.match(draftPickPattern);
-			var cashMatch = curTradeText.match(cashPattern);
+			var cashMatch = curTradeText.match(cashPattern) || curTradeText.match(cashPattern2);
 
 			if(draftPickMatch || cashMatch) {
 				var addBlock = $('#' + team + 'TradeObj');
