--- a/views/freeAgentAuction.jade
+++ b/views/freeAgentAuction.jade
@@ -16,7 +16,7 @@ block content
 				h3= "Your available cash: " +  faa_cash.value
 			p= message
 		div(style="display:inline")
-			h3= "Other teams cash:"
+			h3 Other teams' cash:
 			-var count = 0;
 			table
 				-each cash in cashs
