--- a/views/home.jade
+++ b/views/home.jade
@@ -60,25 +60,25 @@ block content
 				h3 Friday, March 1: Keeper Deadline, "Lock up" Deadline
 				ul
 					li
-						p Select your keepers on this site. Ari will input your selections on the ESPN site.
+						p.longText Select your keepers on this site. Ari will input your selections on the ESPN site.
 					li(id="lockUp")
-						p "Lock up" rule reminder:
+						p.longText "Lock up" rule reminder:
 						ul
 							li
-								p "Locking up" a player buys out the player's remaining keeper years at the current offseason
+								p.longText "Locking up" a player buys out the player's remaining keeper years at the current offseason
 									| price 
 									| (including this offseason's 3 dollar increase)
 							li
-								p Only players with a salary >= 30 may be locked up
+								p.longText Only players with a salary >= 30 may be locked up
 							li
-								p "Locked up" players must be selected as a keeper until their keeper eligibility runs out. 
+								p.longText "Locked up" players must be selected as a keeper until their keeper eligibility runs out. 
 									| If an owner wishes to drop a locked up player, they must pay half of 
 									| the locked up player's salary for the length of the locked up contract
 							li
-								p Trading "locked up" players means also trading the "locked up" player status and remaining years
+								p.longText Trading "locked up" players means also trading the "locked up" player status and remaining years
 									| of keeper eligibility
 							li
-								p Players may only be "locked up" during the offseason
+								p.longText Players may only be "locked up" during the offseason
 
 
 			li
