--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,6 +32,8 @@ html
 							li
 								a(href="/gm/faa") Free Agent Auction
 							li
+								a(href="/gm/watchlist") Watchlist
+							li
 								a(href="/profile") Profile
 							li
 								a(href="/logout") Logout
