--- a/views/watchlist.jade
+++ b/views/watchlist.jade
@@ -38,12 +38,12 @@ block content
 		h2 Add a Player
 		form(id="addPlayer" method="POST" action="/gm/watchlist")
 			label(style="width:200px;display:inline-block") Player Name:
-			input(type="text" name="player_name")
+			input(type="text" name="player_name" autocomplete="off")
 			br
 			label(style="width:200px;display:inline-block") MLB Player Id (Optional):
-			input(type="number" name="player_id")
+			input(type="number" name="player_id" autocomplete="off")
 			br
 			label(style="width:200px;display:inline-block") Rank (Optional):
-			input(type="number" name="rank")
+			input(type="number" name="rank" autocomplete="off")
 			br
 			input(type="submit" value="Submit")
